--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+   <h1>LES 4 CAPITALES LES PLUS GRANDES DU MONDE</h1>
   <a href="index2.html">lien vers index2.html</a>
   <script src="script.js"></script>
 </body>
