--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>Deuxième Page</h1>
+  <h1>Les 4 plus grandes capitales du monde</h1>
   <a href="index.html">Retour à la Page d'accueil</a>
   <script src="script.js"></script>
 </body>
