--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-  <h1>Les 4 plus grandes capitales du monde</h1>
+  <h1>1	Tokyo	Japon
+2	Mexico	Mexique
+3	Séoul	Corée du Sud
+4	Jakarta	Indonésie</h1>
   <a href="index.html">Retour à la Page d'accueil</a>
   <script src="script.js"></script>
 </body>
