--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
    <h1>LES 4 CAPITALES LES PLUS GRANDES DU MONDE</h1>
-  <audio controls autoplay>
-    <source src="votre_musique.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-  <a href="index2.html">lien
+  <a href="index2.html">lien vers index2.html</a>
+  <script src="script.js"></script>
+</body>
+
+</html>
