--- a/index2.html
+++ b/index2.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <h1>1	Tokyo	Japon <br>
-2	Mexico	Mexique <br>
-3	Séoul	Corée du Sud <br>
-4	Jakarta	Indonésie</h2>
+  <h1>1	Tokyo-Japon <br>
+2	Mexico-Mexique <br>
+3	Séoul-Corée du Sud <br>
+4	Jakarta-Indonésie</h2>
   <a href="index.html">Retour à la Page d'accueil</a>
   <script src="script.js"></script>
 </body>
